fix output file name and remake train_**~10000.binaryfile

--- a/prog1_simple_token_DA.ipynb
+++ b/prog1_simple_token_DA.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 形態素情報を付与するための共通プログラム"
+    "# 形態素情報付与"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# data 拡張"
+    "# pos&NERposタグの付与"
    ]
   },
   {
@@ -240,14 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data_original/dev.txt', 'r', encoding='UTF-8') as f:\n",
     "    data = f.read()\n",
     "    data = data.split(\"\\n\\n\")\n",
-    "    # data = data[1:14987] #不要部分をカット\n",
     "\n",
     "    \n",
     "# storing conll format data in multiple list\n",
@@ -290,9 +289,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ~ 18823 :  8822 / 18824"
+     ]
+    }
+   ],
    "source": [
     "n = [10000,18823]\n",
+    "\n",
     "\n",
     "for i in range(len(n)):\n",
     "    if i == 0:\n",
@@ -331,6 +339,67 @@
     "    with open(\"data_pos_binary/dev_tree~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
     "        pickle.dump(document_trees,f)\n",
     "        \n",
+    "    with open(\"data_pos_binary/dev_data~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
+    "        pickle.dump(new_document,f)\n",
+    "\n",
+    "    with open(\"data_pos_binary/dev_error~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
+    "        pickle.dump(error_sentence,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ~ 10000 :  454 / 131767"
+     ]
+    }
+   ],
+   "source": [
+    "n = [10000]\n",
+    "\n",
+    "\n",
+    "for i in range(len(n)):\n",
+    "    if i == 0:\n",
+    "        start = 0\n",
+    "    else:\n",
+    "        start = n[i-1]\n",
+    "    goal = n[i]\n",
+    "    \n",
+    "    \n",
+    "    document_trees = []\n",
+    "    new_document = []\n",
+    "    error_sentence = set()\n",
+    "    c = 0\n",
+    "    \n",
+    "    \n",
+    "    for sentence in document[start:goal]:\n",
+    "\n",
+    "        print('\\r ~ %d :  %d / %d' %(goal, c, len(document)), end='')\n",
+    "        text = \" \".join([token[0] for token in sentence])\n",
+    "\n",
+    "        try:\n",
+    "            label = [token[1] for token in sentence]\n",
+    "            tree = POSTagAnalysis(text)\n",
+    "            document_trees.append(tree)\n",
+    "\n",
+    "            new_sentence = []\n",
+    "            for i in range(len(tree.pos())):\n",
+    "                token = tree.pos()[i][0]\n",
+    "                tag = tree.pos()[i][1]+\"_\"+label[i]\n",
+    "                new_sentence.append([token,tag])\n",
+    "            new_document.append(new_sentence)\n",
+    "        except:\n",
+    "            error_sentence.add(c)\n",
+    "        c = c+1\n",
+    "\n",
+    "    with open(\"data_pos_binary/train_tree~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
+    "        pickle.dump(document_trees,f)\n",
+    "        \n",
     "    with open(\"data_pos_binary/train_data~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
     "        pickle.dump(new_document,f)\n",
     "\n",
@@ -340,14 +409,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    # ここで一つの疑問\n",
-    "    # 交換の割合はどのようにすべきだろうか？\n",
-    "    # (1)simple augmentを参照し確認\n",
-    "    # (2)とりあえず10% 30% 50% 70% 100%と順に試してみる => 先に作成してみましょ"
+    "# 上記セルは回し終えたら削除"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new"
    ]
   },
   {
@@ -372,26 +454,6 @@
     "    #   'DBRS',...\n",
     "    \n",
     "    # label_token_dic.keys() でkey一覧取得可"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # 交換可能パタン\n",
-    "    # B，Iのみ　=> 固有表現に限定したsimple data augmantation\n",
-    "    # oも含む 　=> アノテーションラベル全体に範囲を広げたsimple data augmantation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # ひとまずB，Iのみから作成"
    ]
   },
   {
@@ -493,10 +555,7 @@
    ],
    "source": [
     "SimpleDA_BI(n*1,\"train\")\n",
-    "SimpleDA_BI(n*4,\"train\")\n",
-    "SimpleDA_BI(n*9,\"train\")\n",
-    "SimpleDA_BI(n*49,\"train\")\n",
-    "SimpleDA_BI(n*99,\"train\")"
+    "SimpleDA_BI(n*4,\"train\")"
    ]
   },
   {
