run leaning model and get error message ;(

--- a/prog2_make_pos_data.ipynb
+++ b/prog2_make_pos_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,86 +350,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " ~ 10000 :  454 / 131767"
-     ]
-    }
-   ],
-   "source": [
-    "n = [10000]\n",
-    "\n",
-    "\n",
-    "for i in range(len(n)):\n",
-    "    if i == 0:\n",
-    "        start = 0\n",
-    "    else:\n",
-    "        start = n[i-1]\n",
-    "    goal = n[i]\n",
-    "    \n",
-    "    \n",
-    "    document_trees = []\n",
-    "    new_document = []\n",
-    "    error_sentence = set()\n",
-    "    c = 0\n",
-    "    \n",
-    "    \n",
-    "    for sentence in document[start:goal]:\n",
-    "\n",
-    "        print('\\r ~ %d :  %d / %d' %(goal, c, len(document)), end='')\n",
-    "        text = \" \".join([token[0] for token in sentence])\n",
-    "\n",
-    "        try:\n",
-    "            label = [token[1] for token in sentence]\n",
-    "            tree = POSTagAnalysis(text)\n",
-    "            document_trees.append(tree)\n",
-    "\n",
-    "            new_sentence = []\n",
-    "            for i in range(len(tree.pos())):\n",
-    "                token = tree.pos()[i][0]\n",
-    "                tag = tree.pos()[i][1]+\"_\"+label[i]\n",
-    "                new_sentence.append([token,tag])\n",
-    "            new_document.append(new_sentence)\n",
-    "        except:\n",
-    "            error_sentence.add(c)\n",
-    "        c = c+1\n",
-    "\n",
-    "    with open(\"data_pos_binary/train_tree~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
-    "        pickle.dump(document_trees,f)\n",
-    "        \n",
-    "    with open(\"data_pos_binary/train_data~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
-    "        pickle.dump(new_document,f)\n",
-    "\n",
-    "    with open(\"data_pos_binary/train_error~\"+str(goal)+\".binaryfile\", 'wb') as f:\n",
-    "        pickle.dump(error_sentence,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 上記セルは回し終えたら削除"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new"
+    "# 以下のセルはprog4にて"
    ]
   },
   {
@@ -555,7 +485,10 @@
    ],
    "source": [
     "SimpleDA_BI(n*1,\"train\")\n",
-    "SimpleDA_BI(n*4,\"train\")"
+    "SimpleDA_BI(n*4,\"train\")\n",
+    "SimpleDA_BI(n*9,\"train\")\n",
+    "SimpleDA_BI(n*49,\"train\")\n",
+    "SimpleDA_BI(n*99,\"train\")"
    ]
   },
   {
