fix data and set source file for leaning

--- a/prog4_join_orig_new.ipynb
+++ b/prog4_join_orig_new.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "cff2dc0e",
    "metadata": {},
    "outputs": [],
@@ -19,36 +19,51 @@
     "newline=\"\\n\"\n",
     "delimiter=\" \"\n",
     "space_row = [\"\",\"\"]\n",
-    "col_name = [\"-TOKEN-\",\"-LABEL-\"]\n",
     "    \n",
-    "def JoinD(original,aug_filemname,x,new_filename):\n",
-    "    \n",
-    "    with open(\"data_augment/SimpleDA_BI/\"+aug_filemname, 'r', encoding='UTF-8') as f:\n",
-    "        data = f.read()\n",
-    "        data = data.split(\"\\n\\n\")\n",
+    "def JoinD(origin_filename,aug_filemname,x,new_filename):\n",
+    "    with open(\"data_original/\"+origin_filename, 'r', encoding='UTF-8') as f:\n",
+    "        origin_data = f.read()\n",
+    "        origin_data = origin_data.split(\"\\n\\n\")\n",
     "\n",
-    "    aug_document = []\n",
-    "    for sentence in data:\n",
+    "    origin_document = []\n",
+    "    for sentence in origin_data:\n",
     "        new_sentence_list = []\n",
     "        sentence_list = sentence.split(\"\\n\")\n",
     "\n",
     "        for token in sentence_list:\n",
-    "            token_list = token.split(\" \")\n",
+    "            token_list = token.split(\"\\t\")\n",
+    "            new_sentence_list.append(token_list)\n",
+    "        origin_document.append(new_sentence_list)\n",
+    "        \n",
+    "    \n",
+    "    with open(\"data_augment/SimpleDA_BI/\"+aug_filemname, 'r', encoding='UTF-8') as f:\n",
+    "        aug_data = f.read()\n",
+    "        aug_data = aug_data.split(\"\\n\\n\")\n",
+    "\n",
+    "    aug_document = []\n",
+    "    for sentence in aug_data:\n",
+    "        new_sentence_list = []\n",
+    "        sentence_list = sentence.split(\"\\n\")\n",
+    "\n",
+    "        for token in sentence_list:\n",
+    "            token_list = token.split(\" \")#どの形式でデータを作ったか\n",
     "            new_sentence_list.append(token_list)\n",
     "        aug_document.append(new_sentence_list)\n",
+    "        \n",
+    "    origin_document.extend(aug_document)\n",
+    "    \n",
     "\n",
     "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
-    "        file.write(col_name[0]+delimiter+col_name[1]+\"\\n\")\n",
-    "        for sentence in aug_document:\n",
+    "        for sentence in origin_document:\n",
     "            for token_list in sentence:\n",
-    "                if len(token_list)==2: \n",
+    "                if len(token_list)==2:\n",
     "                    file.write(token_list[0]+delimiter+token_list[1]+\"\\n\")\n",
     "            file.write(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "id": "00ce4f4b-9964-4290-b138-bc66019d769e",
    "metadata": {},
    "outputs": [],
@@ -57,42 +72,15 @@
     "newline=\"\\n\"\n",
     "delimiter=\" \"\n",
     "space_row = [\"\",\"\"]\n",
-    "col_name = [\"-TOKEN-\",\"-LABEL-\"]\n",
     "    \n",
-    "def OutPutD(aug_document,x,new_filename):\n",
+    "def Remove_tree_pos(aug_document,x,new_filename):\n",
     "\n",
     "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
-    "        file.write(col_name[0]+delimiter+col_name[1]+\"\\n\")\n",
     "        for sentence in aug_document:\n",
     "            for token_list in sentence:\n",
     "                if len(token_list)==2: \n",
     "                    file.write(token_list[0]+delimiter+token_list[1]+\"\\n\")\n",
     "            file.write(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6a9dd5c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def JoinD(filemname,x):\n",
-    "    \n",
-    "#     if filename == \"train\":\n",
-    "#         n = 15000\n",
-    "#     elis filename == \"valid\":\n",
-    "#         n = 3500\n",
-    "        \n",
-    "#     origin_file = \"data_original/\"+filename+\".txt\"\n",
-    "#     aug_file = \"data_augment/SimpleDA_BI/\"+str(n*(x-1))+\"_\"+filename+\".txt\"\n",
-    "#     new_file = \"data_augment/SimpleDA_BI/\"+filename+\".txt\"\n",
-    "    \n",
-    "#     with open('data_original/train.txt', 'r', encoding='UTF-8') as f:\n",
-    "#     origin_data = f.read()\n",
-    "    \n",
-    "#     col_name = \"-TOKEN-,-LABEL-\\n\"\n",
-    "    "
    ]
   },
   {
@@ -113,113 +101,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a47c25a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data_original/train.txt', 'r', encoding='UTF-8') as f:\n",
-    "    origin_data = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ca1ce6c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# storing conll format data in multiple list\n",
-    "document = []\n",
-    "for sentence in origin_data:#14988 sentences\n",
-    "    \n",
-    "    new_sentence_list = []\n",
-    "    sentence_list = sentence.split(\"\\n\")\n",
-    "    \n",
-    "    for token in sentence_list:\n",
-    "        token_list = token.split(\" \")\n",
-    "        new_sentence_list.append(token_list)\n",
-    "    document.append(new_sentence_list)\n",
-    "    \n",
-    "original = []\n",
-    "for sentence in document:\n",
-    "    for token_list in sentence:\n",
-    "        try:\n",
-    "            original.append([token_list[0],token_list[3]])\n",
-    "        except:\n",
-    "            pass\n",
-    "    original.append(space_row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "a8944172",
    "metadata": {},
    "outputs": [],
    "source": [
     "# #train\n",
-    "JoinD(original,\"104925_train.txt\",2,\"train_raw.txt\")"
+    "JoinD(\"train.txt\",\"104925_train.txt\",2,\"train_raw.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "a5195617",
+   "execution_count": 49,
+   "id": "459ac28d-e643-435a-af4f-aab0bafe18a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "JoinD(original,\"419700_train.txt\",5,\"train_raw.txt\")"
+    "JoinD(\"train.txt\",\"419700_train.txt\",5,\"train_raw.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e504ec9e-763b-484e-a474-7853cf2f0d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ここで、オリジナルのタグの付与が必要であったので修正\n",
+    "with open('data_augment/SimpleDA_BI/x2/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "    train_data = f.read()\n",
+    "    train_data = train_data.split(\"\\n\\n\")\n",
+    "\n",
+    "train_document = []\n",
+    "for sentence in train_data:\n",
+    "    new_sentence_list = []\n",
+    "    sentence_list = sentence.split(\"\\n\")\n",
+    "    for token in sentence_list:\n",
+    "        token_list = token.split(\" \")\n",
+    "        if len(token_list) == 2:\n",
+    "            original_token = token_list[1].split(\"_\")[-1]\n",
+    "        else:\n",
+    "            original_token = \"\"\n",
+    "        new_sentence_list.append([token_list[0],original_token])\n",
+    "    train_document.append(new_sentence_list)\n",
+    "\n",
+    "OutPutD(train_document,2,\"train.txt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f74b1630-c078-4c9a-ab33-67a3d4cf5bbe",
+   "id": "228fae41-94d7-4045-b951-6c2fdf26fbef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('data_augment/SimpleDA_BI/x2/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "with open('data_augment/SimpleDA_BI/x5/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    train_data = f.read()\n",
-    "    train_data = train_data.split(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "d6071d1e-fdec-45a3-b4d2-89d0c2badbc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    train_data = train_data.split(\"\\n\\n\")\n",
+    "\n",
     "train_document = []\n",
-    "for sentence in dev_data:#14988 sentences\n",
-    "    \n",
+    "for sentence in train_data:\n",
     "    new_sentence_list = []\n",
     "    sentence_list = sentence.split(\"\\n\")\n",
-    "    \n",
     "    for token in sentence_list:\n",
     "        token_list = token.split(\" \")\n",
-    "        if len(token_list) == 2 and token_list[1] != \"-LABEL-\":\n",
-    "            original_token = token_list[1].split(\"_\")[-1] \n",
-    "            \n",
+    "        if len(token_list) == 2:\n",
+    "            original_token = token_list[1].split(\"_\")[-1]\n",
+    "        else:\n",
+    "            original_token = \"\"\n",
     "        new_sentence_list.append([token_list[0],original_token])\n",
     "    train_document.append(new_sentence_list)\n",
-    "    \n",
-    "# dev_document = \n",
-    "# [['-TOKEN-', 'O'],\n",
-    "#  ['The', 'O'],\n",
-    "#  ['Argos', 'building-other'],..]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "5ef1737a-f7ac-4474-9aff-a2aa476dfcae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OutPutD(train_document,2,\"train.txt\")\n",
+    "\n",
     "OutPutD(train_document,5,\"train.txt\")"
    ]
   },
@@ -233,171 +185,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8b2b2319",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data_original/dev.txt', 'r', encoding='UTF-8') as f:\n",
-    "    data = f.read()\n",
-    "    data = data.split(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "4a780e1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# storing conll format data in multiple list\n",
-    "document = []\n",
-    "for sentence in data:#14988 sentences\n",
-    "    \n",
-    "    new_sentence_list = []\n",
-    "    sentence_list = sentence.split(\"\\n\")\n",
-    "    \n",
-    "    for token in sentence_list:\n",
-    "        token_list = token.split(\" \")\n",
-    "        new_sentence_list.append(token_list)\n",
-    "    document.append(new_sentence_list)\n",
-    "    \n",
-    "original = []\n",
-    "for sentence in document:\n",
-    "    for token_list in sentence:\n",
-    "        try:\n",
-    "            original.append([token_list[0],token_list[3]])\n",
-    "        except:\n",
-    "            pass\n",
-    "    original.append([\"\",\"\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "id": "b48d288d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#valid\n",
-    "JoinD(original,\"14990_dev.txt\",2,\"dev_raw.txt\")"
+    "JoinD(\"dev.txt\",\"14990_dev.txt\",2,\"dev_raw.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "id": "76b9d1d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "JoinD(original,\"59960_dev.txt\",5,\"dev_raw.txt\")"
+    "JoinD(\"dev.txt\",\"59960_dev.txt\",5,\"dev_raw.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c6f151c-bbb2-4918-a9ff-d9de34180ca7",
+   "execution_count": 57,
+   "id": "cb501937-c758-4765-bd73-7aba7fe8e6ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ここで、オリジナルのタグの付与が必要であったので修正"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "efa28d8e-44d8-4726-bb9b-6a5b7d7d06c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#ここで、オリジナルのタグの付与が必要であったので修正\n",
     "with open('data_augment/SimpleDA_BI/x2/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    dev_data = f.read()\n",
-    "    dev_data = dev_data.split(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "228f761d-ee91-43d4-b4d4-86a92356a1ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    dev_data = dev_data.split(\"\\n\\n\")\n",
+    "\n",
     "dev_document = []\n",
-    "for sentence in dev_data:#14988 sentences\n",
-    "    \n",
+    "for sentence in dev_data:\n",
     "    new_sentence_list = []\n",
     "    sentence_list = sentence.split(\"\\n\")\n",
-    "    \n",
     "    for token in sentence_list:\n",
     "        token_list = token.split(\" \")\n",
-    "        if len(token_list) == 2 and token_list[1] != \"-LABEL-\":\n",
-    "            original_token = token_list[1].split(\"_\")[-1] \n",
-    "            \n",
+    "        if len(token_list) == 2:\n",
+    "            original_token = token_list[1].split(\"_\")[-1]\n",
+    "        else:\n",
+    "            original_token = \"\"\n",
     "        new_sentence_list.append([token_list[0],original_token])\n",
     "    dev_document.append(new_sentence_list)\n",
-    "    \n",
-    "# dev_document = \n",
-    "# [['-TOKEN-', 'O'],\n",
-    "#  ['The', 'O'],\n",
-    "#  ['Argos', 'building-other'],..]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "a1c02b84-b183-4f3c-a0b1-d59ffb0e50ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "OutPutD(dev_document,2,\"dev.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "a2074cb1-ea3f-4548-9c09-d0489dff2088",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data_augment/SimpleDA_BI/x5/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
-    "    dev_data = f.read()\n",
-    "    dev_data = dev_data.split(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "ec0c8355-0719-4e33-8866-6d4768544ac9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_document = []\n",
-    "for sentence in dev_data:#14988 sentences\n",
-    "    \n",
-    "    new_sentence_list = []\n",
-    "    sentence_list = sentence.split(\"\\n\")\n",
-    "    \n",
-    "    for token in sentence_list:\n",
-    "        token_list = token.split(\" \")\n",
-    "        if len(token_list) == 2 and token_list[1] != \"-LABEL-\":\n",
-    "            original_token = token_list[1].split(\"_\")[-1] \n",
-    "            \n",
-    "        new_sentence_list.append([token_list[0],original_token])\n",
-    "    dev_document.append(new_sentence_list)\n",
-    "    \n",
-    "# dev_document = \n",
-    "# [['-TOKEN-', 'O'],\n",
-    "#  ['The', 'O'],\n",
-    "#  ['Argos', 'building-other'],..]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "id": "60eb874f-d79d-47f6-a0d6-4da88deded5a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ここで、オリジナルのタグの付与が必要であったので修正\n",
+    "with open('data_augment/SimpleDA_BI/x5/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "    dev_data = f.read()\n",
+    "    dev_data = dev_data.split(\"\\n\\n\")\n",
+    "\n",
+    "dev_document = []\n",
+    "for sentence in dev_data:\n",
+    "    new_sentence_list = []\n",
+    "    sentence_list = sentence.split(\"\\n\")\n",
+    "    for token in sentence_list:\n",
+    "        token_list = token.split(\" \")\n",
+    "        if len(token_list) == 2:\n",
+    "            original_token = token_list[1].split(\"_\")[-1]\n",
+    "        else:\n",
+    "            original_token = \"\"\n",
+    "        new_sentence_list.append([token_list[0],original_token])\n",
+    "    dev_document.append(new_sentence_list)\n",
+    "\n",
     "OutPutD(dev_document,5,\"dev.txt\")"
    ]
   },
@@ -411,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "f0113daf",
    "metadata": {},
    "outputs": [],
@@ -423,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "id": "8644d271",
    "metadata": {},
    "outputs": [],
@@ -439,6 +298,21 @@
     "        token_list = token.split(\"\\t\")\n",
     "        new_sentence_list.append(token_list)\n",
     "    document.append(new_sentence_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a02dd0f2-c8c5-4c9f-9260-eaa7c313c923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data_augment/SimpleDA_BI/test.txt\", 'w', newline=newline,encoding='UTF-8') as file:\n",
+    "    for sentence in document:\n",
+    "        for token_list in sentence:\n",
+    "            if len(token_list)==2:\n",
+    "                file.write(token_list[0]+delimiter+token_list[1]+\"\\n\")\n",
+    "        file.write(\"\\n\")"
    ]
   },
   {
